Fixed datepicker layout breaking

--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -14,6 +14,11 @@ Extended Mind specific UI-components, e.g. welcome/landing page, timeline, sidem
 # Datepicker
 */
 
+.datepicker{
+  line-height: @height-heading;
+  vertical-align: middle;
+}
+
 .datepicker-day {
   height: 88px;
   line-height: 88px;
